--- a/hbmc.cabal
+++ b/hbmc.cabal
@@ -18,13 +18,12 @@ library
   hs-source-dirs:      lib
   include-dirs:        lib
   default-language:    Haskell2010
-  build-depends:       base >=4 && <5,
-                       mtl >=2.1 && <2.3,
-                       containers >=0.5 && <0.6,
-                       transformers >=0.3 && <0.4,
-                       minisat >=0.1 && <0.2,
-
-                       tip-haskell-frontend ==0.1
+  build-depends:       base >=4,
+                       mtl >=2.1,
+                       containers >=0.5,
+                       transformers >=0.3,
+                       tip-haskell-frontend ==0.1,
+                       minisat >=0.1
 
 executable hbmcc
   main-is:             TipCompiler.hs
@@ -33,12 +32,12 @@ executable hbmcc
   build-depends:       base >=4 && <5,
                        tip-lib ==0.1,
                        tip-haskell-frontend ==0.1,
-                       geniplate >=0.6.0.6 && <0.7,
+                       geniplate >=0.6.0.6,
 
-                       transformers >=0.3 && <0.4,
-                       mtl >=2.1 && <2.3,
-                       containers >=0.5 && <0.6,
+                       transformers >=0.3,
+                       mtl >=2.1,
+                       containers >=0.5,
 
-                       pretty >=1.1 && <1.2,
-                       pretty-show >=1.6 && <1.7
+                       pretty >=1.1,
+                       pretty-show >=1.6
 
