--- a/hbmc.cabal
+++ b/hbmc.cabal
@@ -12,27 +12,32 @@ cabal-version:       >=1.10
 
 library
   exposed-modules:
-    HBMC
-    LibHBMC
+    HBMC.Lib
 
-  hs-source-dirs:      lib
-  include-dirs:        lib
+  hs-source-dirs:      src
   default-language:    Haskell2010
   build-depends:       base >=4,
                        mtl >=2.1,
                        containers >=0.5,
                        transformers >=0.3,
-                       tip-haskell-frontend ==0.1.1,
                        minisat >=0.1
 
-executable hbmcc
-  main-is:             TipCompiler.hs
-  hs-source-dirs:      compiler
+executable hbmc
+  main-is:             HBMC/Main.hs
+  hs-source-dirs:      src
   default-language:    Haskell2010
   build-depends:       base >=4 && <5,
                        tip-lib == 0.1.2,
                        tip-haskell-frontend ==0.1.1,
                        geniplate-mirror >= 0.7.1,
+
+                       cmdargs,
+                       process,
+                       directory,
+                       filepath,
+                       temporary,
+
+                       minisat >=0.1,
 
                        transformers >=0.3,
                        mtl >=2.1,
