--- a/evaluation/Makefile
+++ b/evaluation/Makefile
@@ -1,47 +1,50 @@
-files = $(wildcard benchmarks/**/*smt2)
+files = $(wildcard benchmarks/sat/*smt2)
 
 lazy_hs = $(subst benchmarks,benchmarks-lazysc,$(files:.smt2=.hs))
 feat_hs = $(subst benchmarks,benchmarks-feat,$(files:.smt2=.hs))
 smten_hs = $(subst benchmarks,benchmarks-smten,$(files:.smt2=.hs))
 
-all_hs = $(lazy_hs) # $(smten_hs) # $(feat_hs)
+all_hs = $(lazy_hs) $(feat_hs) $(smten_hs)
 
-# files_cvc4 = $(wildcard benchmarks-cvc4/*smt2)
-# sk_targets = $(subst cvc4,sk,$(files_cvc4))
+files_cvc4 = $(subst benchmarks,benchmarks-cvc4,$(files))
 
-targets = $(all_hs:.hs=.bin)
+targets = $(all_hs:.hs=.bin) $(files_cvc4)
 
 benchmarks-lazysc/%.bin: benchmarks-lazysc/%.hs
+	ghc --make $< -o $@
+
+benchmarks-feat/%.bin: benchmarks-feat/%.hs
 	ghc --make $< -o $@
 
 benchmarks-smten/%.bin: benchmarks-smten/%.hs
 	smten --make $< -o $@
 
-# benchmarks-sk/%: benchmarks-cvc4/%
-# 	mkdir -p $$(dirname $@)
-# 	tip $< --make-conjecture 0 --skolemise-conjecture --negate-conjecture > $@
+benchmarks-cvc4/%: benchmarks/%
+	mkdir -p $$(dirname $@)
+	tip $< --monomorphise --lambda-lift --axiomatize-lambdas --monomorphise --remove-match --simplify-gently --skolemise-conjecture --negate-conjecture > $@
 
-benchmarks-lazysc/%.hs: benchmarks/%.smt2
+benchmarks-lazysc/unsat/%.hs: benchmarks/unsat/%.smt2
 	mkdir -p $$(dirname "$@")
 	tip $< --haskell-lazysc-depth > $@
 
-benchmarks-smten/%.hs: benchmarks/%.smt2
+benchmarks-lazysc/sat/%.hs: benchmarks/sat/%.smt2
 	mkdir -p $$(dirname "$@")
-	tip --bool-op-to-if --remove-builtin-bool --haskell-smten $< > $@
+	tip $< --haskell-lazysc > $@
 
 benchmarks-feat/%.hs: benchmarks/%.smt2
 	mkdir -p $$(dirname "$@")
 	tip $< --haskell-feat > $@
+
+benchmarks-smten/%.hs: benchmarks/%.smt2
+	mkdir -p $$(dirname "$@")
+	tip $< --haskell-smten > $@
 
 all: $(targets)
 
 .SECONDARY: $(hs)
 
 clean:
-	rm -rf benchmarks-sk/*
-	rm -rf benchmarks-feat/*
-	rm -rf benchmarks-lazysc/*
-	rm -rf benchmarks-smten/*
+	rm -rf benchmarks-{cvc4,feat,lazysc,smten}/*
 
 info:
 	echo $(files)
