--- a/hbmc.cabal
+++ b/hbmc.cabal
@@ -15,8 +15,8 @@ executable hbmc
   hs-source-dirs:      src
   default-language:    Haskell2010
   build-depends:       base >=4 && <5,
-                       tip-lib == 0.2,
-                       tip-haskell-frontend ==0.2,
+                       tip-lib == 0.2.1,
+                       tip-haskell-frontend == 0.2,
                        geniplate-mirror >= 0.7.1,
 
                        cmdargs,
@@ -25,7 +25,7 @@ executable hbmc
                        filepath,
                        temporary,
 
-                       minisat >=0.1,
+                       satplus,
 
                        transformers >=0.3,
                        mtl >=2.1,
